Added liquibase to project

--- a/spring-app/src/main/resources/application.properties
+++ b/spring-app/src/main/resources/application.properties
@@ -11,3 +11,5 @@ server.servlet.session.timeout=1h
 server.servlet.session.tracking-modes=COOKIE
 server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.secure=false
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
