--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
+    "@date-io/dayjs": "^2.11.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -11,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
+    "date-fns": "^2.25.0",
     "history": "^5.0.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
@@ -46,6 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/lab": "^5.0.0-alpha.51",
+    "@mui/material": "^5.0.4",
     "miragejs": "^0.1.42"
   }
 }
