--- a/spring-app/pom.xml
+++ b/spring-app/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
