--- a/react-app/package.json
+++ b/react-app/package.json
@@ -54,6 +54,7 @@
     "@material-ui/pickers": "^3.3.10",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
-    "miragejs": "^0.1.42"
+    "miragejs": "^0.1.42",
+    "react-icons": "^4.3.1"
   }
 }
