- added statistic endpoint for swagger, - added parameters to product suggestions endpoint for swagger

--- a/spring-app/src/main/resources/application.properties
+++ b/spring-app/src/main/resources/application.properties
@@ -6,10 +6,12 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 server.port=24080
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-server.servlet.session.cookie.max-age=15m
-server.servlet.session.timeout=1h
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+server.servlet.session.cookie.max-age=365d
+server.servlet.session.timeout=365d
 server.servlet.session.tracking-modes=COOKIE
 server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.secure=false
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
