--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -11,11 +11,15 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: Setup npm
+        uses: actions/setup-node@v2
+
       - name: Setup Java JDK
         uses: actions/setup-java@v1.4.3
         with:
           java-version: 11
           cache: maven
+
       - name: Build with Maven
         run: |
           cd spring-app/
