--- a/react-app/package.json
+++ b/react-app/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-image-autofit-frame": "^0.1.0",
     "react-query": "^3.33.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
