--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^2.11.0",
     "@date-io/dayjs": "^2.11.0",
+    "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
