--- a/spring-app/src/main/resources/application.properties
+++ b/spring-app/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.data.rest.base-path=/api
 spring.data.rest.detection-strategy=annotated
+server.port=8080
+
 spring.datasource.url=jdbc:mysql://localhost:3306/mealcore
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=HwqYt6WjvH@DSt
 spring.jpa.hibernate.ddl-auto=none
-server.port=24080
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.liquibase.enabled=true
