--- a/spring-app/pom.xml
+++ b/spring-app/pom.xml
@@ -178,4 +178,21 @@
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M5</version>
+            </plugin>
+        </plugins>
+    </reporting>
+    <profiles>
+        <profile>
+            <id>test</id>
+            <properties>
+                <active-profile>test</active-profile>
+            </properties>
+        </profile>
+    </profiles>
 </project>
